[Vega] Fix test